# articles

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  Makefile.inc  README.md  meetingcpp-2018-report.md  monoid.md  monoid_abstract.md  thats-not-an-int.md  to_reveal.py
.semaphore/: semaphore.yml
function_composition/: function_composition.md  pipeline.cpp  pipeline.py  pipeline_transformations.md  test_pipeline.py
generic-tuple-hash/: CMakeLists.txt  tests.cpp
generic-tuple-hash/include/gthash/: gthash.h
generic_tuple_hash/: CMakeLists.txt  generic_tuple_hash.md
generic_tuple_hash/include/gthash/: gthash.h
monoid/: .gitignore  Makefile  benchmark.cpp  float_monoid.cpp  groceries.cc  groceries.cpp  groceries.h  groceries_monoid.hpp  monoid.hpp  monoid.md  test_groceries.cpp
monoid/resources/css/theme/source/: sioux.scss
src/meetingcpp-2018-report/: Makefile  concepts.cxx  truth.cxx
use-a-tuple/: tuple-reveals-your-intent.md
